--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,8 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import Hero from "../components/Hero.astro";
 import Values from "../components/Values.astro";
-import Services from "../components/Services.astro";
 import Expertise from "../components/Expertise.astro";
-import Temoignages from "../components/Temoignages.astro";
+import Equipe from "../components/Equipe.astro";
 import Contact from "../components/Contact.astro";
 import Cta from "../components/Cta.astro";
 import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
@@ -130,9 +129,8 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
       <div class="max-w-[90%] mx-auto">
         <Hero />
         <Values />
-        <Services />
         <Expertise />
-        <Temoignages />
+        <Equipe />
         <Contact />
         <Cta />
       </div>
