--- a/src/components/BlogHeader.astro
+++ b/src/components/BlogHeader.astro
@@ -8,7 +8,7 @@ import { ActionButtons } from "./ActionButtons";
     <div class="flex h-16 items-center justify-between">
       <!-- Logo -->
       <a href="/" class="flex items-center space-x-2">
-        <span class="text-2xl font-bold text-gray-900">Blog Fiscal</span>
+        <span class="text-2xl font-bold text-gray-900">Blog Juridique</span>
       </a>
 
       <!-- Navigation du blog -->
